Started work on the connect section

--- a/index.html
+++ b/index.html
@@ -42,21 +42,34 @@
         </div>
         <div class="SectionHeaders" id="Education">
             <h3>Education</h3>
-            <div class="Left">
-                <p>Michigan State University</p>
-                <p>Bachelor's Degree</p>
-                <p>Major: Computer Science</p>
-                <p>Minor: Economics</p>
-                <p>GPA: 3.61</p>
-                <p>2015 - May 2019</p>
+            <div>
+                <div class="Left">
+                    <p>Michigan State University</p>
+                    <p>Bachelor's Degree</p>
+                    <p>Major: Computer Science</p>
+                    <p>Minor: Economics</p>
+                    <p>GPA: 3.62</p>
+                    <p>2015 - May 2019</p>
+                </div>
+                <div class="Right">
+                    <p></p>
+                </div>
             </div>
-            <div class="Right">
-                <p></p>
+            <div class="Rows">
+                <div class="Left">
+                    <p>Study Abroad</p>
+                    <p>American College of Thessaloniki</p>
+                    <p>Thessaloniki, Greece</p>
+                    <p>Summer 2017</p>
+                </div>
+                <div class="Right">
+                    <p></p>
+                </div>
             </div>
         </div>
         <div class="SectionHeaders" id="Experience">
             <h3>Experience</h3>
-            <div class="Clear">
+            <div>
                 <div class="Left">
                     <p>Facility for Rare Isotope Beams</p>
                     <p>Student IT Assistant</p>
@@ -91,6 +104,10 @@
 <div class="MainContainer" id="ConnectBox">
     <a name="Connect" class="anchor"></a>
     <h2>Connect</h2>
+    <div id="icons">
+        <p><a href=""><img src="In-2C-59px-R.png" alt="linkedinimg" height="59" width="70" /></a></p>
+        <p><a href=""><img src="f-ogo_RGB_HEX-58.png" alt="facebookimg" height="58" width="58"></a></p>
+    </div>
 </div>
 <footer>
 
