Quick connect update to remove email image

--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
         <p><a href=""><img src="In-2C-59px-R.png" alt="linkedinimg" height="59" width="70" /></a></p>
         <p><a href=""><img src="f-ogo_RGB_HEX-58.png" alt="facebookimg" height="58" width="58"></a></p>
     </div>
+    <div>
+        <p><a href="mailto:david.g.evenson@gmail.com">david.g.evenson@gmail.com</a></p>
+        <p>(517)488-4110</p>
+    </div>
 </div>
 <footer>
 
