Updated minion project description and started adding project2

--- a/index.html
+++ b/index.html
@@ -129,11 +129,13 @@
         <div class="ProjectSlide" id="proj1">
             <p><a href=""><img src="bummer.png" alt="project1" height="400" width="400"></a></p>
             <h3>Minion Bummer!</h3>
-            <p class="ProjectDescription">test test test</p>
+            <p class="ProjectDescription">Our final project for my Web Development class was a group project
+                to create "Minion Bummer!", a combination of "Sorry!" and our professor's favorite theme, minions.
+                The game is created with HTML, PHP, and CSS plus JavaScript for all game processes.</p>
         </div>
 
         <div class="ProjectSlide" id="proj2">
-            <p><a href=""><img src="bummer.png" alt="project2" height="400" width="400"></a></p>
+            <p><a href=""><img src="CSE435APA.jpg" alt="project2" height="600" width="400"></a></p>
             <p class="ProjectDescription">test test test 2</p>
         </div>
 
