--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <a class="Arrow Next" onClick="nextSlide(1)">&#10095;</a>
 
         <div class="ProjectSlide" id="proj1">
-            <p><a href=""><img src="bummer.png" alt="project1" height="400" width="400"></a></p>
+            <p><a href=""><img src="bummer.png" alt="project1" height="300" width="300"></a></p>
             <h3>Minion Bummer!</h3>
             <p class="ProjectDescription">Our final project for my Web Development class was a group project
                 to create "Minion Bummer!", a combination of "Sorry!" and our professor's favorite theme, minions.
@@ -135,10 +135,20 @@
         </div>
 
         <div class="ProjectSlide" id="proj2">
-            <p><a href=""><img src="CSE435APA.jpg" alt="project2" height="600" width="400"></a></p>
+            <p><a href=""><img src="CSE435APA.jpg" alt="project2" height="450" width="300"></a></p>
             <p class="ProjectDescription">test test test 2</p>
         </div>
 
+        <div class="ProjectSlide" id="proj3">
+            <h3 id="MoreToCome">More to come!</h3>
+        </div>
+
+    </div>
+
+    <div class="SlideDots">
+        <span class="Dot" onclick="gotoSlide(0)"></span>
+        <span class="Dot" onclick="gotoSlide(1)"></span>
+        <span class="Dot" onclick="gotoSlide(2)"></span>
     </div>
 </div>
 <div class="MainContainer" id="ConnectBox">
