moved images to folder

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="OuterContentBox">
         <div id="ProfileHeader">
             <div id="ProfilePictureBox">
-                <p><img id="ProfilePicture" src="Evenson.jpg" width="200" height="200" alt="Profile image" /></p>
+                <p><img id="ProfilePicture" src="images/Evenson.jpg" width="200" height="200" alt="Profile image" /></p>
             </div>
             <div id="AboutMe">
                 <p><b>David Evenson - Michigan State University</b></p>
@@ -128,7 +128,7 @@
         <a class="Arrow Next" onClick="nextSlideP(1)">&#10095;</a>
 
         <div class="ProjectSlide" id="proj1">
-            <p><a href="http://webdev.cse.msu.edu/~evenson6/project3/"><img src="bummer.png" alt="project1" height="300" width="300"></a></p>
+            <p><a href="http://webdev.cse.msu.edu/~evenson6/project3/"><img src="images/bummer.png" alt="project1" height="300" width="300"></a></p>
             <h3>Minion Bummer!</h3>
             <p class="ProjectDescription">Our final project for my Web Development class was a group project
                 to create "Minion Bummer!", a combination of "Sorry!" and our professor's favorite theme, minions.
@@ -136,7 +136,7 @@
         </div>
 
         <div class="ProjectSlide" id="proj2">
-            <p><a href="http://cse.msu.edu/~evenson6/cse435-project1/"><img src="CSE435project.png" alt="project2" height="300" width="542"></a></p>
+            <p><a href="http://cse.msu.edu/~evenson6/cse435-project1/"><img src="images/CSE435project.png" alt="project2" height="300" width="542"></a></p>
             <h3>Software Engineering Project Web Page</h3>
             <p class="ProjectDescription">As the Artifacts Manager of our group in my Software Engineering class,
                 my main task was to log and track all development of the project. In other words I was in charge
@@ -159,8 +159,8 @@
     <a name="Connect" class="anchor"></a>
     <h2>Connect</h2>
     <div id="icons">
-        <p><a href="https://www.linkedin.com/in/david-evenson-msu19/"><img src="In-2C-59px-R.png" alt="linkedinimg" height="59" width="70" /></a></p>
-        <p><a href="https://www.facebook.com/david.evenson.77"><img src="f-ogo_RGB_HEX-58.png" alt="facebookimg" height="58" width="58"></a></p>
+        <p><a href="https://www.linkedin.com/in/david-evenson-msu19/"><img src="images/In-2C-59px-R.png" alt="linkedinimg" height="59" width="70" /></a></p>
+        <p><a href="https://www.facebook.com/david.evenson.77"><img src="images/f-ogo_RGB_HEX-58.png" alt="facebookimg" height="58" width="58"></a></p>
     </div>
     <div>
         <p><a href="mailto:david.g.evenson@gmail.com">david.g.evenson@gmail.com</a></p>
@@ -175,7 +175,7 @@
         <a class="Arrow Next" onClick="nextSlideM(1)">&#10095;</a>
 
         <div class="MeSlide">
-            <p><img src="SailingBW.JPG" alt="project1" height="300" width="230"></p>
+            <p><img src="images/SailingBW.JPG" alt="project1" height="300" width="230"></p>
             <h3></h3>
             <p class="MeDescription"></p>
         </div>
