Added pong to slideshow

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                 <p><br/>My combination of over 3 years working on SharePoint and an internship working with OpenShift gives me a
                     unique perspective having both front-end and back-end experience. Creating complicated workflow processes
                     while only using out of the box workflows and keeping in mind the back-end problems they could cause has
-                    given me a strong ability to problem solve and be creative in these environments.</p>
+                    given me a strong ability to problem solve and be creative in these environments. For a pdf format of
+                    my resume please click <a href="ResumeFall2018.pdf">here</a>.</p>
             </div>
         </div>
         <div class="SectionHeaders" id="Education">
@@ -64,7 +65,7 @@
                         algorithms and data structures, software design, and computer architecture. I have expanded on that
                         foundation by taking a variety of 400 level electives including Web Development and Android
                         Application Development and am currently taking Software Engineering and Computer Networks. To
-                        see my full transcript please contact me via any of the sources in the <a href="#connect">connect</a>
+                        see my full transcript please contact me via any of the sources in the <a href="#Connect">connect</a>
                         section.</p>
                 </div>
             </div>
@@ -144,6 +145,13 @@
         </div>
 
         <div class="ProjectSlide" id="proj3">
+            <p><a href="http://cse.msu.edu/~evenson6/pong/"><img src="images/Pong.png" alt="project2" height="300" width="522"></a></p>
+            <h3>Pong</h3>
+            <p class="ProjectDescription">A simple home project to keep my JavaScript skills up to date
+                and keep myself entertained at the same time</p>
+        </div>
+
+        <div class="ProjectSlide" id="proj4">
             <h3 id="MoreToCome">More to come!</h3>
         </div>
 
@@ -153,6 +161,7 @@
         <span class="ProjectDot" onclick="gotoSlideP(0)"></span>
         <span class="ProjectDot" onclick="gotoSlideP(1)"></span>
         <span class="ProjectDot" onclick="gotoSlideP(2)"></span>
+        <span class="ProjectDot" onclick="gotoSlideP(3)"></span>
     </div>
 </div>
 <div class="MainContainer" id="ConnectBox">
@@ -167,6 +176,7 @@
         <p>(517)488-4110</p>
     </div>
 
+    <!--
     <h3>Outside the Classroom!</h3>
 
     <div class="SlideshowBox">
@@ -185,6 +195,8 @@
     <div class="SlideDots">
         <span class="MeDot" onclick="gotoSlideM(0)"></span>
     </div>
+    -->
+
 </div>
 <footer>
 
